# tome

./: .gitignore  Cargo.toml  Changes.md  README.md  notes.md  rustfmt.toml
.github/workflows/: build.yml
src/: app.rs  code_gen.rs  components.rs  fs.rs  main.rs  messages.rs  options.rs  projects.rs  requests.rs  templates.rs  theme.rs
src/compatibility/: postman.rs
src/components/: _edit_header_selector.rs  add_header_window.rs  app_layout.rs  app_section.rs  button.rs  confirm_action_window.rs  dashboard.rs  edit_header_selector.rs  edit_header_window.rs  edit_input.rs  floating_windows.rs  focusable_section.rs  inputs.rs  menu_item.rs  method_selector.rs  options.rs  project_window.rs  request_body_section.rs  request_headers_editor.rs  response_renderer.rs  row.rs  syntax_highlighter.rs  textarea.rs  textinput.rs
src/components/dashboard/: action_confirmations.rs  associated_functions.rs  component.rs  keyboard_events.rs
src/components/floating_windows/: add_project_variable.rs  app_theme_selector.rs  body_mode_selector.rs  button_style_selector.rs  code_gen.rs  commands.rs  edit_endpoint_name.rs  edit_project_name.rs  endpoints_selector.rs  file_selector.rs  project_variables.rs  syntax_theme_selector.rs
src/components/templates/: add_header_window.aml  button.aml  confirm_action_window.aml  dashboard.aml  edit_header_selector.aml  edit_header_window.aml  edit_input.aml  options.aml  project_window.aml  request_body_section.aml  request_headers_editor.aml  response_renderer.aml  (+3 more)
src/messages/: confirm_actions.rs  confirm_delete_project.rs  focus_messages.rs
(+10 files in other folders)
