[package]
name = "tome"
version = "0.1.2"
edition = "2024"

[dependencies]
anathema = { git = "https://github.com/s9tpepper/anathema.git", branch = "dev" }
anyhow = "1.0.95"
arboard = "3.4.1"
clap = { version = "4.5.26", features = ["derive", "env", "cargo"] }
directories = "6.0.0"
log = "0.4.25"
mime = "0.3.17"
native-tls = "0.2.12"
openssl = { version = "0.10.68", features = ["vendored"] }
quit = "2.0.0"
rstest = "0.25.0"
serde = { version = "1.0.217", features = ["alloc", "derive", "serde_derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.135"
simplelog = "0.12.2"
syntect = "5.2.0"
ureq = { version = "2.12.1", features = ["json", "native-tls"] }
ureq_multipart = "1.1.1"
uuid = { version = "1.12.0", features = [ "v5"] }
void = "1.0.2"

[features]
default = ["runtime_templates"]
runtime_templates = []
static_templates = []
